refactor: resolve remaining SonarQube issues and centralize messages