@@ -1,7 +1,7 @@
 package com.developerplatform.featureflag.service.impl;
 
+import com.developerplatform.common.constants.messages.FeatureFlagMessages;
 import com.developerplatform.common.enums.ErrorCode;
-import com.developerplatform.common.exception.ConflictException;
 import com.developerplatform.common.exception.ResourceNotFoundException;
 import com.developerplatform.featureflag.dto.request.CreateFeatureFlagRequest;
 import com.developerplatform.featureflag.dto.response.FeatureFlagResponse;
@@ -45,7 +45,7 @@ public class FeatureFlagServiceImpl implements FeatureFlagService {
         return featureFlagRepository.findByProjectIdAndDeletedAtIsNull(projectId)
                 .stream()
                 .map(featureFlagMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -54,7 +54,7 @@ public class FeatureFlagServiceImpl implements FeatureFlagService {
         FeatureFlag flag = featureFlagRepository.findByProjectIdAndKeyAndDeletedAtIsNull(projectId, key)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         ErrorCode.RESOURCE_NOT_FOUND,
-                        "Feature flag not found"
+                        FeatureFlagMessages.FLAG_NOT_FOUND
                 ));
                 
         return featureFlagMapper.toResponse(flag);
@@ -66,7 +66,7 @@ public class FeatureFlagServiceImpl implements FeatureFlagService {
         FeatureFlag flag = featureFlagRepository.findByProjectIdAndKeyAndDeletedAtIsNull(projectId, key)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         ErrorCode.RESOURCE_NOT_FOUND,
-                        "Feature flag not found"
+                        FeatureFlagMessages.FLAG_NOT_FOUND
                 ));
                 
         flag.setEnabled(!flag.isEnabled());
@@ -83,7 +83,7 @@ public class FeatureFlagServiceImpl implements FeatureFlagService {
         FeatureFlag flag = featureFlagRepository.findByIdAndProjectIdAndDeletedAtIsNull(flagId, projectId)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         ErrorCode.RESOURCE_NOT_FOUND,
-                        "Feature flag not found"
+                        FeatureFlagMessages.FLAG_NOT_FOUND
                 ));
                 
         flag.setDeletedAt(LocalDateTime.now(clock));
